set (lib_SRCS)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/inc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/test/api_test)

IF (UNIX)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/platform/posix)
ENDIF()
IF (WIN32)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/platform/win32)
ENDIF()

ADD_SUBDIRECTORY(emu)
ADD_SUBDIRECTORY(uffs)
ADD_SUBDIRECTORY(utils)
ADD_SUBDIRECTORY(example)
ADD_SUBDIRECTORY(platform)
ADD_SUBDIRECTORY(test/api_test)
ADD_SUBDIRECTORY(test/clients)

add_library(uffs_shared SHARED ${lib_SRCS})

